deployments/gw-api-deployment/base/gw-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-gw-api-ingress
  namespace: default
spec:
  ports:
  - appProtocol: tcp
    name: status-port
    port: 15021
    protocol: TCP
    targetPort: 15021
  - appProtocol: http
    name: default
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    istio.io/gateway-name: gateway
