deployments/gw-api-deployment/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-gw-api-echo
  labels:
    app: gw-api-echo
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: gw-api-echo
    # version: v1
