deployments/gw-api-deployment/base/gateway.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  namespace: default
spec:
  gatewayClassName: istio
  addresses:
  - value: svc-gw-api-ingress.default.svc.cluster.local
    type: Hostname
  listeners:
  - name: default
    # hostname: "*.example.com"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        # from: Same
        # from: All
        from: Selector
        selector:
          matchLabels:
            kubernetes.io/metadata.name: default
